--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039440.md#1" title="美欧日台科技产业论坛 强化供应链接盟""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039442-503706-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039134.md#1" title="【疫情6.22】Delta变种新突变 现身英美日等国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-1308418936-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://wtyoso3338.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041368.md#1">【疫情6.23】疫情期间 全球贫富差距扩大</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041473.md#1">亚塞拜然的“仙女城堡”在峭壁上 来源成谜</a><br>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041327.md#1">七一前 四川一男子自制炸弹称要引爆被击毙</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041313.md#1">民生银行又被罚 今年已被罚逾千万</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041367.md#1">欧盟对台立场大转变   专家：疫情为转捩点</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041068.md#1">31韩国人抵北京 隔离期护照被销毁引争议</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041368.md#1">【疫情6.23】疫情期间 全球贫富差距扩大</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041473.md#1">亚塞拜然的“仙女城堡”在峭壁上 来源成谜</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041327.md#1">七一前 四川一男子自制炸弹称要引爆被击毙</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041313.md#1">民生银行又被罚 今年已被罚逾千万</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041367.md#1">欧盟对台立场大转变   专家：疫情为转捩点</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041068.md#1">31韩国人抵北京 隔离期护照被销毁引争议</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037328.md#1">董经纬叛逃？章家敦：若属实 中共或一夜变天</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037552.md#1">建党百年陷前所未有困境 中共还能撑多久</a><br>
@@ -28,13 +28,13 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037571.md#1">陆大学生酷热中求装空调 当局严防校园风险</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037608.md#1">王友群：三次叛逃对中共都似晴天霹雳</a><br>
 <br><p align="center"><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039778.md#1">【珍言真语】练乙铮：中共本性狂妄令世界反感</a><br>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/10/n13014000.md#1">【独家】法治还是人治？ 文件曝中共谎言</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13038018.md#1">钟原：美抗共转守为攻 疫情追责是关键</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037806.md#1">【时事纵横】七一风声鹤唳 中共发灭门威胁</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036845.md#1">【新闻大家谈】邱香果“消失”引爆加国舆论</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035206.md#1">林辉：中共三名高官叛逃带来的重创</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/11/n13015930.md#1">【思想领袖】希斯：取消文化兴起令人生畏</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035544.md#1">【一线采访】东莞麻涌封镇 当地大学现疫情</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13035660.md#1">【中共党史】中共配合苏联肢解中国（下）</a><br>
 <br><p align="center"><a href="https://github.com/wtyoso3338/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040410.md#1">杨威：崔天凯自行告别 背后有隐情？</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041142.md#1">【一线采访】广东疫情严峻 当局严控信息</a><br>
@@ -55,7 +55,6 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040043.md#1">家姐当年想当摄影记者 周润发送名贵器材力挺</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040237.md#1">【役情最前线】专家指高官逃美 中共或一夜变天</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040311.md#1">【时事纵横】疫情逼京深停航 亲共世卫专家凉了</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039778.md#1">【珍言真语】练乙铮：中共本性狂妄令世界反感</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037253.md#1">黑龙江女医师王玉卓遭十年冤狱折磨 夫离子散</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039409.md#1">【唐浩视界】美250万疫苗援台 破中共统战三阴谋</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037691.md#1">【探索时分】暗剑无人机吓坏美军？吹15年无影</a><br>
@@ -96,25 +95,26 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031883.md#1">【役情最前线】亲共有风险 爱同会会长染疫亡</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030988.md#1">临出狱 江苏法轮功学员潘绪军被监狱害死</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031909.md#1">周冬雨首部古装剧翻车 大女主演成小丫鬟？</a><br>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031093.md#1">【拍案惊奇】普京笑答中共武统 让北京失望了？</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://111.253.239.217/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,854</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.228.158.147/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,854</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 379,372,126 人
+!共 379,372,834 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041152-S__4939779-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039101.md#1">女儿遭轮奸险被灭口8年不立案 母伸冤被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035936.md#1">无锡沈爱斌探访病友 遭警方拦截后失联</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041313.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/03/402201007868-e1503456304352-412x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041313.md#1">民生银行又被罚 今年已被罚逾千万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040781.md#1">惠誉下调中国恒大评级至B 展望为负面</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1">深圳一住宅指导价13万拍出45万 引关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039969.md#1">大陆假芯片横行 日趋严重 风险转嫁消费者</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039708.md#1">瑞典法院维持对华为5G网络设备的禁令</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038924.md#1">80元游戏卡 大陆拍出8700万天价</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040829-2106222354552378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1">立陶宛赠台疫苗 蔡英文以立陶宛语感谢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040571.md#1">依赖中国疫苗的数个国家疫情严峻 警示世界</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040436.md#1">美第七舰队驱逐舰穿越台湾海峡 中共又气炸</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040255.md#1">美众院外委会主席：中共不是中国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039918.md#1">四十多国发声明关注新疆香港人权 中共跳脚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039802.md#1">曾被中共软禁美国球员：减重40磅 不知疫情</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040876.md#1">因降雨内蒙学校四百余人被困 嫩江现编号洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1">中国多地暴雨频发 黑龙江现50年一遇洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1">打疫苗抽奖送电动车 中共鼓励接种奇招百出</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039190.md#1">福建村民摆酒席时砖墙意外坠落 致9死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039025.md#1">水位上涨迅速 黑龙江呼玛县洪峰将至</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041327.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041327.md#1">七一前 四川一男子自制炸弹称要引爆被击毙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039843.md#1">“躺平” T恤、手机壳及车贴等全线下架</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039747.md#1">宁波打桩机砸中轿车两死 死者传为名企老总</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038155.md#1">三退声明精选（2021/06/21）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039721-000_98G3TW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13026757.md#1">数百中国学生学者疫情初期提前返美 遭美调查</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
-<tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/10/n13014000.md#1">【独家】法治还是人治？ 文件曝中共谎言</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/4/n12924622.md#1">【独家】起底中共高层力捧的广西柳工</a><br>
+<tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/4/n12924622.md#1">【独家】起底中共高层力捧的广西柳工</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/1/n12990081.md#1">【独家】维也纳孔子学院成中共渗透桥头堡</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/14/n12947914.md#1">【独家】文件泄华大游说河北推优生政策</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/18/n12957519.md#1">【独家】打入欧洲 中共以匈牙利为跳板</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/3/n12921696.md#1">【内幕】复阳频发 国务院和地方各说各话</a><br>
-<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/14/n12948096.md#1">【金色种子】一位走入大法修炼的气功师</a><br>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/5/n12926515.md#1">【内幕】文件曝政法督导组进驻河北细节</a><br>
+<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040050.md#1">【未解之谜】苏美尔文明是中华神传文化一部分？</a><br>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/14/n12948096.md#1">【金色种子】一位走入大法修炼的气功师</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031032.md#1">神机妙算的孔明 成败生死如何看天意？</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/17/n13029141.md#1">【未解之谜】爱德加·凯西和他的“生命解读”</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/4/15/n12880960.md#1">佩鲁吉诺Perugino——拉斐尔的大师（上）</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/23/n12970344.md#1">《淮南子》故事：福祸相依 受到伤害意外得福</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030562.md#1">【唐诗漫谈】帝者气象</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/brkhkd3127/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
