--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -11,7 +11,7 @@
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040173.md#1" target="_blank">【一线采访】佛山上千市民抗议 要求解封</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040173.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040185-5382f6e540adf73947235bc96f1b455e-150x120.jpg" align ="left"></a>广东省佛山市南海区因中共病毒疫情被封锁数周，大批人员面临失业。6月21日晚，当地多个区同时爆发大规模群体抗议，包括上千市民聚集在西环桥底等多个路口，齐声呐喊，要求解封。当局派数百特警到场，双方发生冲突。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月23日 4:31 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/13/n13019873.md#1" target="_blank">【忽必烈传】南宋气数尽 蒙元攻下襄樊</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/13/n13019873.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12980446-35c4b9556e32083c28b652e09d051e6a-150x120.jpg" align ="left"></a>在成吉思汗、窝阔台时期，蒙古人经过几番征讨，将日渐衰落的西夏和金国纳入了蒙古帝国的版图，这也意味着蒙古帝国的边界与南宋接壤，而南宋则成为蒙古人下一个征服的目标，但这也是最难征服的目标。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月23日 3:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039303.md#1" target="_blank">与武毒所关系密切 达扎克被柳叶刀除名</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039303.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039611-Peter-Daszak-1200x798-150x120.jpeg" align ="left"></a>总部设在纽约的生态健康联盟（EcoHealth Alliance）负责人彼得?达扎克（Peter Daszak）给了武汉病毒研究所数十万美元的联邦资金，他因此被要求退出《柳叶刀》（Lancet）的COVID-19（中共病毒引发的疾病）委员会。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月23日 1:48 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039794.md#1" target="_blank">实验室泄漏是阴谋论？柳叶刀多名科学家改口</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039794.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1669697443-600x400-150x120.jpg" align ="left"></a>医学杂志《柳叶刀》周一（6月21日）更新了它在2020年发表的一份声明。该声明称COVID-19可能源自中国武汉病毒研究所的说法为“阴谋论”。更新中说，签署这份声明的主要科学家未按规定披露竞争性利益关系。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月23日 12:56 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039794.md#1" target="_blank">实验室泄漏是阴谋论？柳叶刀多名科学家改口</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039794.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1669697443-600x400-150x120.jpg" align ="left"></a>医学杂志《柳叶刀》在2020年曾发表声明，称COVID-19可能源自中国武汉病毒研究所的说法为“阴谋论”。然而周一（6月21日），《柳叶刀》更新了这份声明，称曾经签署那份声明的主要科学家没有按规定披露竞争性利益关系。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月23日 12:56 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039440.md#1" target="_blank">美欧日台科技产业论坛 强化供应链接盟</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039440.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039442-503706-150x120.jpg" align ="left"></a>2021科技产业全球供应链合作论坛22日线上举行，欧洲经贸办公室、美国在台协会（AIT）、日本台湾交流协会、台湾经济部发表联合新闻稿表示，疫情与地缘政治不确定为世界各地的供应链带来了机会与挑战。对于建构更坚韧、智慧与永续的全球供应链的需求与日俱增。AIT处长郦英杰表示，台湾是美国关键伙伴，加强台美供应链韧性，有信心双边经济将持续扩大合作。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 11:31 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039134.md#1" target="_blank">【疫情6.22】Delta变种新突变 现身英美日等国</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039134.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-1308418936-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周二（6月22日）早上3:40，全球的中共病毒（俗称武汉病毒、新型冠状病毒）病例总数超过1.78亿（178,788,247）例，死亡人数超过387万（3,873,285）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 9:03 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037691.md#1" target="_blank">【探索时分】暗剑无人机吓坏美军？吹15年无影</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037691.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037695-6fc0b470d129a5f6a7f2eac0c3335cb1-150x120.jpg" align ="left"></a>暗剑无人机，研发了15年，到现在依然没有原型机，却被很多媒体称之为“最强”无人机，那么这又是一款什么飞机呢？在解放军内部，歼8为什么又叫和平鸽？沈阳飞机制造厂有着怎么样的历史？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 6:00 PM							</td></tr>
